test-cases/negative/test_026_while_without_do.lay
# negative test: while without 'do' keyword
# expected: error should be thrown

while true
  print 'loop'


